When calling echo with an argument, it prints the same argument back with a new line character

--- a/C/POSIX/echo/Makefile
+++ b/C/POSIX/echo/Makefile
@@ -6,6 +6,8 @@ all: test
 .PHONY: test
 test: echo
 	diff <(echo) <(./echo)
+	diff <(echo foo) <(./echo foo)
+	diff <(echo "foo bar") <(./echo "foo bar")
 
 .PHONY: clean
 clean::
