Implement logic to pass multiple arguments to the echo command

--- a/C/POSIX/echo/Makefile
+++ b/C/POSIX/echo/Makefile
@@ -8,6 +8,7 @@ test: echo
 	diff <(echo) <(./echo)
 	diff <(echo foo) <(./echo foo)
 	diff <(echo "foo bar") <(./echo "foo bar")
+	diff <(echo foo bar) <(./echo foo bar)
 
 .PHONY: clean
 clean::
