errno message for No such file or directory

--- a/C/POSIX/cat/Makefile
+++ b/C/POSIX/cat/Makefile
@@ -8,6 +8,7 @@ test: cat
 	echo -e "Fizz\nBuzz" | cat > actualStdout.txt
 	echo -e "Fizz\nBuzz" | ./cat > expectedStdout.txt
 	diff actualStdout.txt expectedStdout.txt
+	diff <(cat fileDoNotExist.txt) <(./cat fileDoNotExist.txt)
 
 .PHONY: clean
 clean::
