When calling 0 1 2 Fizz 4 Buzz Fizz 7 8 9 Buzz, then it prints the contents of the file to the console

--- a/C/POSIX/cat/Makefile
+++ b/C/POSIX/cat/Makefile
@@ -9,6 +9,7 @@ test: cat
 	echo -e "Fizz\nBuzz" | ./cat > expectedStdout.txt
 	diff actualStdout.txt expectedStdout.txt
 	diff <(cat fileDoNotExist.txt) <(./cat fileDoNotExist.txt)
+	diff <(cat fileToPrint.txt) <(./cat fileToPrint.txt)
 
 .PHONY: clean
 clean::
