--- a/C/POSIX/cat/Makefile
+++ b/C/POSIX/cat/Makefile
@@ -11,6 +11,7 @@ test: cat
 	diff <(cat fileDoNotExist.txt) <(./cat fileDoNotExist.txt)
 	diff <(cat fileToPrint.txt) <(./cat fileToPrint.txt)
 	diff <(cat fileToPrint.txt fileDoNotExist.txt) <(./cat fileToPrint.txt fileDoNotExist.txt)
+	diff <(cat fileToPrint.txt hello.txt) <(./cat fileToPrint.txt hello.txt)
 
 .PHONY: clean
 clean::
