--- a/C/POSIX/cat/Makefile
+++ b/C/POSIX/cat/Makefile
@@ -12,6 +12,7 @@ test: cat
 	diff <(cat fileToPrint.txt) <(./cat fileToPrint.txt)
 	diff <(cat fileToPrint.txt fileDoNotExist.txt) <(./cat fileToPrint.txt fileDoNotExist.txt)
 	diff <(cat fileToPrint.txt hello.txt) <(./cat fileToPrint.txt hello.txt)
+	diff <(cat cat) <(./cat cat)
 
 .PHONY: clean
 clean::
